Fix missing back/next arrows on mobile. Closes #69.

--- a/less/memoriam.less
+++ b/less/memoriam.less
@@ -309,7 +309,7 @@ body { background-color: @slide-bg-color }
 	#audio-navbar .branding h2 { background-position: -129px 0; width: 113px; }
 	.jp-current-time { border-left: none; }
 	.nav-btn.back-next { padding-left: 0; padding-right: 0; width: 40px; }
-	.back-next b { display: none; }
+	.back-next b span { display: none; }
 
 	#title-button {  width: auto; border: none; background: none; padding: 0; margin: 20px; }
 
